flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Current visibility of every ViewLayer whose LeLayerRow::name
  /// is `layer_name` (case-sensitive exact match) - i.e. a whole row
  /// (every purpose-column of it) together, not one column - a
  /// coarser-grained "layer visibility widget" model than one toggle per
  /// grid cell: see le_is_purpose_visible() for the other axis, and
  /// Scene::is_view_layer_visible for how a specific column's effective
  /// visibility combines both. Visible by default until toggled. Returns
  /// nonzero (visible) if handle or layer_name is null, matching Scene's
  /// own "unknown name defaults to visible" default.
  int le_is_layer_name_visible(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> layer_name,
  ) {
    return _le_is_layer_name_visible(handle, layer_name);
  }

  late final _le_is_layer_name_visiblePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_is_layer_name_visible');
  late final _le_is_layer_name_visible = _le_is_layer_name_visiblePtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)>();

  /// @brief Set the visibility of every ViewLayer whose LeLayerRow::name
  /// is `layer_name` - e.g. a layer-visibility widget's row-header
  /// checkbox. Mirrors Scene::set_layer_name_visible directly (affects
  /// rendering - see Pipeline::filter_by_layer_visibility). A no-op if
  /// handle or layer_name is null.
  void le_set_layer_name_visible(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> layer_name,
    int visible,
  ) {
    return _le_set_layer_name_visible(handle, layer_name, visible);
  }

  late final _le_set_layer_name_visiblePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<LeHandle>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('le_set_layer_name_visible');
  late final _le_set_layer_name_visible = _le_set_layer_name_visiblePtr
      .asFunction<
        void Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>, int)
      >();

  /// @brief Current visibility of every ViewLayer whose purpose is
  /// `purpose` (mirrors le::ViewLayerPurpose's declaration order: 0 =
  /// TERMINAL, 1 = OBSTRUCTION, 2 = BOUNDARY), across every layer - i.e.
  /// a whole column, not one row. Visible by default until toggled.
  /// Returns nonzero (visible) if handle is null.
  int le_is_purpose_visible(ffi.Pointer<LeHandle> handle, int purpose) {
    return _le_is_purpose_visible(handle, purpose);
  }

  late final _le_is_purpose_visiblePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_is_purpose_visible');
  late final _le_is_purpose_visible = _le_is_purpose_visiblePtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Set the visibility of every ViewLayer whose purpose is
  /// `purpose`, across every layer - e.g. a layer-visibility widget's
  /// column-header checkbox. Mirrors Scene::set_purpose_visible directly
  /// (affects rendering). A no-op if handle is null.
  void le_set_purpose_visible(
    ffi.Pointer<LeHandle> handle,
    int purpose,
    int visible,
  ) {
    return _le_set_purpose_visible(handle, purpose, visible);
  }

  late final _le_set_purpose_visiblePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_set_purpose_visible');
  late final _le_set_purpose_visible = _le_set_purpose_visiblePtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief The current interaction mode (see LeMode). Returns
  /// LE_MODE_SELECT if handle is null.
  int le_get_mode(ffi.Pointer<LeHandle> handle) {
    return _le_get_mode(handle);
  }

  late final _le_get_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_get_mode',
      );
  late final _le_get_mode = _le_get_modePtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief Switch the current interaction mode (see LeMode). A no-op
  /// if handle is null.
  void le_set_mode(ffi.Pointer<LeHandle> handle, int mode) {
    return _le_set_mode(handle, mode);
  }

  late final _le_set_modePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_set_mode');
  late final _le_set_mode = _le_set_modePtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Current selectability of every ViewLayer whose LeLayerRow::name
  /// is `layer_name` - see le_is_layer_name_visible()'s comment for the
  /// general row/column model this mirrors. Selectable by default until
  /// toggled. Purely an interaction-layer concern (no hit-testing/
  /// click-to-select API exists yet to consult it) - doesn't affect
  /// rendering. Returns nonzero (selectable) if handle or layer_name is
  /// null.
  int le_is_layer_name_selectable(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> layer_name,
  ) {
    return _le_is_layer_name_selectable(handle, layer_name);
  }

  late final _le_is_layer_name_selectablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_is_layer_name_selectable');
  late final _le_is_layer_name_selectable = _le_is_layer_name_selectablePtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)>();

  /// @brief Set the selectability of every ViewLayer whose LeLayerRow::name
  /// is `layer_name`. Mirrors Scene::set_layer_name_selectable directly.
  /// A no-op if handle or layer_name is null.
  void le_set_layer_name_selectable(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> layer_name,
    int selectable,
  ) {
    return _le_set_layer_name_selectable(handle, layer_name, selectable);
  }

  late final _le_set_layer_name_selectablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<LeHandle>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('le_set_layer_name_selectable');
  late final _le_set_layer_name_selectable = _le_set_layer_name_selectablePtr
      .asFunction<
        void Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>, int)
      >();

  /// @brief Current selectability of every ViewLayer whose purpose is
  /// `purpose`, across every layer. Selectable by default until toggled.
  /// Returns nonzero (selectable) if handle is null.
  int le_is_purpose_selectable(ffi.Pointer<LeHandle> handle, int purpose) {
    return _le_is_purpose_selectable(handle, purpose);
  }

  late final _le_is_purpose_selectablePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_is_purpose_selectable');
  late final _le_is_purpose_selectable = _le_is_purpose_selectablePtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Set the selectability of every ViewLayer whose purpose is
  /// `purpose`, across every layer. Mirrors Scene::set_purpose_selectable
  /// directly. A no-op if handle is null.
  void le_set_purpose_selectable(
    ffi.Pointer<LeHandle> handle,
    int purpose,
    int selectable,
  ) {
    return _le_set_purpose_selectable(handle, purpose, selectable);
  }

  late final _le_set_purpose_selectablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_set_purpose_selectable');
  late final _le_set_purpose_selectable = _le_set_purpose_selectablePtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Zoom the viewport, keeping the dbu point under screen pixel
  /// (x, y) fixed on screen. `factor` is a signed fractional step applied
  /// to the current scale (new_scale = scale * (1 + factor)) - positive
  /// zooms in, negative zooms out (e.g. 0.1 zooms in 10%, -0.1 zooms out
  /// 10%); a factor <= -1.0 (which would make new_scale non-positive) is
  /// ignored, same guard as Scene::set_scale. `x`/`y` are in the same
  /// pixel space as le_render_pixel_buffer()'s output image - top-left
  /// origin, y increasing downward (see api.hpp's LePixelBuffer) - not
  /// Renderer's own pre-Y-flip pixel space, since this is meant to be fed
  /// straight from a pointer/tap event on the rendered image. A no-op if
  /// handle is null. Backend now owns pan/scale entirely - there is no
  /// direct pan/scale setter; use le_fit_scene() to reset to a known view.
  void le_zoom(ffi.Pointer<LeHandle> handle, double factor, int x, int y) {
    return _le_zoom(handle, factor, x, y);
  }

  late final _le_zoomPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<LeHandle>,
            ffi.Double,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('le_zoom');
  late final _le_zoom = _le_zoomPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, double, int, int)>();

  /// @brief Pan the viewport by a fraction of its own size, in dbu-space
  /// directions (positive x_factor/y_factor move the view toward
  /// increasing dbu x/y - the same "up is positive" convention as the
  /// database itself, not screen space): pan += (x_factor, y_factor) *
  /// viewport_size / scale. E.g. x_factor = 1.0 pans right by exactly one
  /// full viewport width of content. A no-op if handle is null.
  void le_pan(ffi.Pointer<LeHandle> handle, double x_factor, double y_factor) {
    return _le_pan(handle, x_factor, y_factor);
  }

  late final _le_panPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Double, ffi.Double)
        >
      >('le_pan');
  late final _le_pan = _le_panPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, double, double)>();

  /// @brief Set the viewport size in pixels - also the size of the
  /// buffer le_render_pixel_buffer() produces. Mirrors
  /// Scene::set_viewport_size directly.
  void le_set_viewport_size(
    ffi.Pointer<LeHandle> handle,
    int width_px,
    int height_px,
  ) {
    return _le_set_viewport_size(handle, width_px, height_px);
  }

  late final _le_set_viewport_sizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_set_viewport_size');
  late final _le_set_viewport_size = _le_set_viewport_sizePtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Fit the viewport's pan/scale to the currently selected
  /// Design's content bbox: uniform scale (no stretch) so the content
  /// fills the viewport set via le_set_viewport_size() with `padding_px`
  /// of margin on every side, pan centering it. Mirrors
  /// Scene::fit_to_content, using Pipeline::generate_shapes' output for
  /// the bbox (same shapes le_render_pixel_buffer() would draw). A no-op
  /// if handle is null; degrades to scale 1.0 / pan (0, 0) if no Design
  /// is selected or its Abstract has no shapes, rather than crashing.
  void le_fit_scene(ffi.Pointer<LeHandle> handle, int padding_px) {
    return _le_fit_scene(handle, padding_px);
  }

  late final _le_fit_scenePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_fit_scene');
  late final _le_fit_scene = _le_fit_scenePtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int)>();
